<resources>
    <string name="app_name">ROUTT</string>
    <string name="entra">Entra</string>
    <string name="registrate">Registrate</string>
    <string name="hint_nombreUsuario">Nombre de Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido_Paterno">Apellido Paterno</string>
    <string name="hint_apellido_Materno">Apellido Materno</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_descripcion">Descripcion</string>
    <string name="hint_confirma_Contraseña">Confirma Contraseña</string>
    <string name="hint_correo">Correo Electronico</string>
    <string name="title_activity_referencia">Referencia</string>
    <string name="hint_correoElectronico">Correo Electrónico</string>
    <string name="text_button_login">LOGIN</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?,</string>
    <string name="crea_una_aqui">Crea una aquí</string>
    <string name="tab_agenda">Agenda</string>
    <string name="tab_perfil">Perfil</string>
    <string name="tab_camion">Camión</string>
    <string name="tab_viajes">Viajes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carga">Carga</string>
    <string name="cantidad">Cantidad</string>
    <string name="toneladas">Toneladas</string>
    <string name="hint_nombreLugarSalida">Nombre Lugar Salida</string>
    <string name="hint_nombreLugarLlegada">Nombre Lugar Llegada</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_hora">Hora</string>
    <string name="hint_pago">Pago</string>
    <string name="registrame">Registrame</string>
    <string name="rControl">R. Control</string>
    <string name="full">Full</string>
    <string name="agregaImagen">Agrega Imagen</string>
    <string name="hint_modelo">Modelo</string>
    <string name="hint_marca">Marca</string>
    <string name="hint_placa">Placa</string>
    <string name="noEconomico">No. Economico</string>
    <string name="tab_salir">Salir</string>
    <string name="title_activity_trailero_contenedor">TraileroContenedor</string>
    <string name="cierraSesion">Cierra Sesion</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="agregarAMiLista">Agregar a mi lista</string>
    <string name="IrAPerfilOfertante">Ir a perfil del ofertante</string>
    <string name="eliminarDeMiLista">Eliminar viaje de mi lista</string>
    <string name="calificarOfertante">Calificar ofertante</string>
    <string name="IrAPerfilDeLaPersona">Ir a perfil de la persona</string>
    <string name="calificarPersona">Califica persona</string>
    <string name="eliminarViaje">Eliminar viaje</string>
    <string name="ComoTeGustariaRegistrate">¿Como te gustaria registrarte?</string>
    <string name="tipoCaja">Tipo de caja</string>
    <string name="dobleRemolque">Doble remolque</string>
    <string name="RControl">Recurso confiable</string>
    <string name="experiencia">Califica al ofertante</string>
</resources>
