<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreaTraileroActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/salmon"
                    android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                    android:hint="@string/hint_nombre"/>
                <EditText
                    android:id="@+id/apePat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/salmon"
                    android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                    android:hint="@string/hint_apellido_Paterno"/>
                <EditText
                    android:id="@+id/apeMat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/salmon"
                    android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                    android:hint="@string/hint_apellido_Materno"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <EditText
                        android:id="@+id/edad"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/salmon"
                        android:inputType="numberSigned"
                        android:hint="@string/hint_edad"/>
                    <Switch
                        android:id="@+id/rControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rControl" />
                </LinearLayout>
                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/salmon"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_correoElectronico"/>
                <EditText
                    android:id="@+id/contra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/salmon"
                    android:inputType="textPassword"
                    android:hint="@string/hint_contraseña"/>
                <EditText
                    android:id="@+id/confirmaContra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/salmon"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirma_Contraseña"/>

            <ImageView
                android:id="@+id/imagenId"
                android:layout_width="165dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:background="@drawable/avatar_trailero"
                android:elevation="20dp"
                android:onClick="corre"
                android:scaleType="centerCrop" />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/nueva_imagen_icon"
                android:background="@drawable/nueva_imagen_icon" />

            <Button
                android:id="@+id/btnAgregaPersona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/azulFuerte"
                android:onClick="creaPersona"
                android:text="@string/registrate"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
    </android.support.constraint.ConstraintLayout>